--- a/src/main/java/com/mycompany/boletin25/Xogo.form
+++ b/src/main/java/com/mycompany/boletin25/Xogo.form
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
 <Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+  <NonVisualComponents>
+    <Component class="javax.swing.JProgressBar" name="jProgressBar1">
+    </Component>
+  </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
   </Properties>
@@ -38,14 +42,66 @@
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Component id="jScrollPane2" alignment="1" pref="462" max="32767" attributes="0"/>
+              <Component id="jScrollPane2" alignment="1" max="32767" attributes="0"/>
+              <Group type="102" alignment="1" attributes="0">
+                  <Component id="numeroXogado" min="-2" pref="252" max="-2" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
+                  <Component id="numeroPremiado" min="-2" pref="252" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="22" max="-2" attributes="0"/>
+              </Group>
+              <Group type="102" alignment="1" attributes="0">
+                  <EmptySpace min="-2" pref="56" max="-2" attributes="0"/>
+                  <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
+                  <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="84" max="-2" attributes="0"/>
+              </Group>
+              <Group type="102" attributes="0">
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Group type="102" alignment="0" attributes="0">
+                          <EmptySpace min="-2" pref="154" max="-2" attributes="0"/>
+                          <Component id="premio" min="-2" pref="213" max="-2" attributes="0"/>
+                      </Group>
+                      <Group type="102" alignment="0" attributes="0">
+                          <EmptySpace min="-2" pref="115" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                              <Group type="102" alignment="1" attributes="0">
+                                  <Component id="bComrobar" min="-2" pref="98" max="-2" attributes="0"/>
+                                  <EmptySpace max="32767" attributes="0"/>
+                                  <Component id="bLimpar" min="-2" pref="105" max="-2" attributes="0"/>
+                              </Group>
+                              <Component id="numero" min="-2" pref="285" max="-2" attributes="0"/>
+                          </Group>
+                      </Group>
+                  </Group>
+                  <EmptySpace max="32767" attributes="0"/>
+              </Group>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
                   <Component id="jScrollPane2" min="-2" pref="273" max="-2" attributes="0"/>
-                  <EmptySpace min="0" pref="128" max="32767" attributes="0"/>
+                  <EmptySpace min="-2" pref="19" max="-2" attributes="0"/>
+                  <Component id="numero" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="24" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Component id="bComrobar" min="-2" max="-2" attributes="0"/>
+                      <Component id="bLimpar" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <EmptySpace min="-2" pref="21" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="1" attributes="0">
+                      <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
+                      <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <EmptySpace max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="1" attributes="0">
+                      <Component id="numeroPremiado" min="-2" max="-2" attributes="0"/>
+                      <Component id="numeroXogado" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <EmptySpace pref="18" max="32767" attributes="0"/>
+                  <Component id="premio" min="-2" pref="50" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="15" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -62,7 +118,7 @@
               <Properties>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                   <Table columnCount="3" rowCount="17">
-                    <Column editable="true" title="" type="java.lang.Object">
+                    <Column editable="true" title="" type="java.lang.Integer">
                       <Data value="1"/>
                       <Data value="4"/>
                       <Data value="7"/>
@@ -81,7 +137,7 @@
                       <Data value="46"/>
                       <Data value="49"/>
                     </Column>
-                    <Column editable="true" title="" type="java.lang.Object">
+                    <Column editable="true" title="" type="java.lang.Integer">
                       <Data value="2"/>
                       <Data value="5"/>
                       <Data value="8"/>
@@ -98,9 +154,9 @@
                       <Data value="41"/>
                       <Data value="44"/>
                       <Data value="47"/>
-                      <Data value="/"/>
+                      <Data value="null"/>
                     </Column>
-                    <Column editable="true" title="" type="java.lang.Object">
+                    <Column editable="true" title="" type="java.lang.Integer">
                       <Data value="3"/>
                       <Data value="6"/>
                       <Data value="9"/>
@@ -117,7 +173,7 @@
                       <Data value="42"/>
                       <Data value="45"/>
                       <Data value="48"/>
-                      <Data value="/"/>
+                      <Data value="null"/>
                     </Column>
                   </Table>
                 </Property>
@@ -151,6 +207,37 @@
             </Component>
           </SubComponents>
         </Container>
+        <Component class="javax.swing.JLabel" name="jLabel1">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="N&#xfa;mero xogado"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JLabel" name="jLabel2">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="N&#xfa;mero premiado "/>
+          </Properties>
+        </Component>
+        <Component class="java.awt.TextField" name="numeroXogado">
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="numeroXogadoActionPerformed"/>
+          </Events>
+        </Component>
+        <Component class="java.awt.TextField" name="numeroPremiado">
+        </Component>
+        <Component class="java.awt.TextField" name="numero">
+        </Component>
+        <Component class="java.awt.Button" name="bComrobar">
+          <Properties>
+            <Property name="label" type="java.lang.String" value="comprobar"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JLabel" name="premio">
+        </Component>
+        <Component class="java.awt.Button" name="bLimpar">
+          <Properties>
+            <Property name="label" type="java.lang.String" value="Xogar de novo"/>
+          </Properties>
+        </Component>
       </SubComponents>
     </Container>
   </SubComponents>
